; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/extr_zfs_ioctl.c_zfs__fini.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/extr_zfs_ioctl.c_zfs__fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@zio_injection_enabled = common dso_local global i64 0, align 8
@EBUSY = common dso_local global i32 0, align 4
@zfs_fsyncer_key = common dso_local global i32 0, align 4
@rrw_tsd_key = common dso_local global i32 0, align 4
@zfs_allow_log_key = common dso_local global i32 0, align 4
@zfs_share_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zfs__fini() #0 {
  %1 = alloca i32, align 4
  %2 = call i64 (...) @spa_busy()
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %13, label %4

4:                                                ; preds = %0
  %5 = call i64 (...) @zfs_busy()
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %13, label %7

7:                                                ; preds = %4
  %8 = call i64 (...) @zvol_busy()
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %7
  %11 = load i64, i64* @zio_injection_enabled, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %10, %7, %4, %0
  %14 = load i32, i32* @EBUSY, align 4
  store i32 %14, i32* %1, align 4
  br label %24

15:                                               ; preds = %10
  %16 = call i32 (...) @zfsdev_fini()
  %17 = call i32 (...) @zvol_fini()
  %18 = call i32 (...) @zfs_fini()
  %19 = call i32 (...) @spa_fini()
  %20 = call i32 @tsd_destroy(i32* @zfs_fsyncer_key)
  %21 = call i32 @tsd_destroy(i32* @rrw_tsd_key)
  %22 = call i32 @tsd_destroy(i32* @zfs_allow_log_key)
  %23 = call i32 @mutex_destroy(i32* @zfs_share_lock)
  store i32 0, i32* %1, align 4
  br label %24

24:                                               ; preds = %15, %13
  %25 = load i32, i32* %1, align 4
  ret i32 %25
}

declare dso_local i64 @spa_busy(...) #1

declare dso_local i64 @zfs_busy(...) #1

declare dso_local i64 @zvol_busy(...) #1

declare dso_local i32 @zfsdev_fini(...) #1

declare dso_local i32 @zvol_fini(...) #1

declare dso_local i32 @zfs_fini(...) #1

declare dso_local i32 @spa_fini(...) #1

declare dso_local i32 @tsd_destroy(i32*) #1

declare dso_local i32 @mutex_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
